--- a/.env
+++ b/.env
@@ -1,7 +1,8 @@
 # Database
-DB_USER=username
-DB_PASSWD=password
-DB_NAME=prestashop
+MYSQL_RANDOM_ROOT_PASSWORD=1
+MYSQL_USER=username
+MYSQL_PASSWORD=password
+MYSQL_DATABASE=prestashop
 
 # Prestashop
 PS_DOMAIN=localhost
