--- a/.env
+++ b/.env
@@ -3,9 +3,13 @@ MYSQL_RANDOM_ROOT_PASSWORD=1
 MYSQL_USER=username
 MYSQL_PASSWORD=password
 MYSQL_DATABASE=prestashop
+MYSQL_SERVER=mysql
 
 # Prestashop
+PS_DB_SERVER=mysql
 PS_DOMAIN=localhost
+PS_ADMIN_EMAIL=email@email.com
+PS_ADMIN_PASSWORD=123456
 PS_DEV_MODE=1
 PS_FOLDER_ADMIN=adminPS
 PS_MODULE_NAME=testmodule
