--- a/.env
+++ b/.env
@@ -10,7 +10,7 @@ PS_DB_SERVER=mysql
 PS_DOMAIN=localhost
 PS_ADMIN_EMAIL=email@email.com
 PS_ADMIN_PASSWORD=123456
-PS_DEV_MODE=1
+PS_DEV_MODE=true
 PS_FOLDER_ADMIN=adminPS
 PS_MODULE_NAME=testmodule
 PS_LANGUAGE=fr
