--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -26,7 +26,7 @@ services:
     build:
       context: .
       args:
-        APP_NAME: $APP_NAME
+        APP_NAME: ${APP_NAME}
     volumes : 
       - ./sites/${APP_NAME}/:/var/www/html
     restart: always
