--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -27,6 +27,19 @@ services:
       context: .
       args:
         APP_NAME: ${APP_NAME}
+    command: >
+      bash -c "cd /var/www/html/install 
+      && php index_cli.php 
+      --domain=${PS_DOMAIN} 
+      --db_server=${MYSQL_SERVER} 
+      --db_name=${MYSQL_DATABASE} 
+      --db_user=${MYSQL_USER} 
+      --db_password=${MYSQL_PASSWORD} 
+      --email=${PS_ADMIN_EMAIL} 
+      --password=${PS_ADMIN_PASSWORD} 
+      --language=${PS_LANGUAGE} 
+      --country=${PS_COUNTRY} 
+      && apachectl -D FOREGROUND"
     volumes : 
       - ./sites/${APP_NAME}/:/var/www/html
     restart: always
