--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -29,19 +29,7 @@ services:
       context: .
       args:
         APP_LOCATION: ${APP_LOCATION}
-    command: >
-      bash -c "php ./install/index_cli.php 
-      --domain=${PS_DOMAIN} 
-      --db_server=${MYSQL_SERVER} 
-      --db_name=${MYSQL_DATABASE} 
-      --db_user=${MYSQL_USER} 
-      --db_password=${MYSQL_PASSWORD} 
-      --email=${PS_ADMIN_EMAIL} 
-      --password=${PS_ADMIN_PASSWORD} 
-      --language=${PS_LANGUAGE} 
-      --country=${PS_COUNTRY} 
-      && rm -r install/
-      && apachectl -D FOREGROUND"
+    command: ["/tmp/wait-for-it.sh", "--timeout=60", "--strict", "mysql:3306", "--", "/tmp/run_install_prestashop.sh"]
     volumes : 
       - ${APP_LOCATION}/:/var/www/html
     ports:
