--- a/.env
+++ b/.env
@@ -4,6 +4,7 @@ MYSQL_USER=username
 MYSQL_PASSWORD=password
 MYSQL_DATABASE=prestashop
 MYSQL_SERVER=mysql
+USER_ID=1000
 
 # Prestashop
 PS_DB_SERVER=mysql
