--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,13 +3,14 @@ version: '3'
 services:
 
   mysql:
-    image: mysql/mysql-server:5.7
+    image: mysql:5
     restart: always
     env_file:
       - .env
     volumes:
       - ${APP_LOCATION}/.docker/data/mysql/:/var/lib/mysql
       - ${APP_LOCATION}/.docker/logs/mysql/:/var/log/mysql
+      - ./init.sql:/docker-entrypoint-initdb.d/init.sql
     networks:
       - default
   
