--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,7 +10,7 @@ services:
     volumes:
       - ${APP_LOCATION}/.docker/data/mysql/:/var/lib/mysql
       - ${APP_LOCATION}/.docker/logs/mysql/:/var/log/mysql
-      - ./init.sql:/docker-entrypoint-initdb.d/init.sql
+      - ./init-db.sh:/docker-entrypoint-initdb.d/init-db.sh
     networks:
       - default
   
