--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,8 +8,8 @@ services:
     env_file:
       - .env
     volumes:
-      - ${APP_LOCATION}/.docker/data/mysql/:/var/lib/mysql:rw
-      - ${APP_LOCATION}/.docker/logs/mysql/:/var/log/mysql:rw
+     # - ${APP_LOCATION}/.docker/data/mysql/:/var/lib/mysql:rw
+     # - ${APP_LOCATION}/.docker/logs/mysql/:/var/log/mysql:rw
       - ./init-db.sh:/docker-entrypoint-initdb.d/init-db.sh
     networks:
       - default
