--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,7 @@ version: '3'
 services:
 
   mysql:
-    build: database/mysql/.
+    build: database/mysql/.docker/.
     restart: always
     env_file:
       - .env
