--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,8 +10,9 @@ services:
     volumes:
       - ${APP_LOCATION}/.docker/data/mysql/:/var/lib/mysql:rw
       - ${APP_LOCATION}/.docker/logs/mysql/:/var/log/mysql:rw
-    networks:
-      - default
+    ports:
+      - 3306:3306
+
 
   # phpmyadmin:
   #   image: phpmyadmin/phpmyadmin
