--- a/.docker/mysql/Dockerfile
+++ b/.docker/mysql/Dockerfile
@@ -1,6 +1,6 @@
 FROM mysql:5
-ADD scripts/init-db.sh /docker-entrypoint-initdb.d/
+#ADD scripts/init-db.sh /docker-entrypoint-initdb.d/
 
-RUN chown -R mysql:mysql /docker-entrypoint-initdb.d/
+#RUN chown -R mysql:mysql /docker-entrypoint-initdb.d/
 
 CMD ["mysqld", "--character-set-server=utf8mb4", "--collation-server=utf8mb4_unicode_ci"]
