--- a/.docker/mysql/Dockerfile
+++ b/.docker/mysql/Dockerfile
@@ -1,4 +1,5 @@
 FROM mysql:5
+RUN whoami
 #ADD scripts/init-db.sh /docker-entrypoint-initdb.d/
 
 #RUN chown -R mysql:mysql /docker-entrypoint-initdb.d/
