--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,8 +8,8 @@ services:
     env_file:
       - .env
     volumes:
-      - ${APP_LOCATION}/.docker/data/mysql/:/var/lib/mysql:rw
-      - ./dock/.docker/logs/mysql/:/var/log/mysql:rw
+      - ./dock/data/mysql/:/var/lib/mysql:rw
+      - ./dock/logs/mysql/:/var/log/mysql:rw
     ports:
       - 3306:3306
     #container_name: ${APP_NAME}_mysql
