--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,7 +19,7 @@ services:
         # LOGS
         "--log_error=/var/log/mysql/mysql_error.log",
         "--general_log_file=/var/log/mysql/mysql.log", "--general_log=1",
-        "--log_slow_queries=/var/log/mysql/mysql-slow.log", "--long_query_time=2", "--log-queries-not-using-indexes",
+        "--slow_query_log_file=/var/log/mysql/mysql-slow.log", "--slow_query_log=1", "--log-queries-not-using-indexes",
       ]
     #container_name: ${APP_NAME}_mysql
 
