--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,8 +2,8 @@ version: "3"
 
 services:
   mysql:
-    image: mysql:5.7
-    container_name: presta_mysql #rajouter nom app
+    image: mariadb:10.5.8
+    container_name: presta_${APP_NAME}_mysql
     restart: unless-stopped
     env_file:
       - .env
