--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,7 +16,7 @@ services:
     entrypoint: "" # On écrase l'entrypoint de l'image mysql : ENTRYPOINT ["docker-entrypoint.sh"]
     command: >
       bash -c "chown -R mysql:mysql /var/log/mysql 
-      && exec /entrypoint.sh mysqld 
+      && exec /docker-entrypoint.sh mysqld 
       --character-set-server=utf8mb4 --collation-server=utf8mb4_unicode_ci 
       --log_error=/var/log/mysql/mysql_error.log 
       --general_log_file=/var/log/mysql/mysql.log --general_log=1 
