--- a/.env
+++ b/.env
@@ -6,6 +6,10 @@ MYSQL_DATABASE=prestashop
 MYSQL_SERVER=mysql
 USER_ID=1000
 
+# pour docker_entrypoint.sh
+DB_HOST=mysql
+DB_PORT=3306
+
 # Prestashop
 PS_DB_SERVER=mysql
 PS_DOMAIN=209.97.178.32:8000
