--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,8 +9,8 @@ services:
       - .env
     volumes:
       #- ./db_data/db/backup.sql:/docker-entrypoint-initdb.d/backup.sql #it loads an already existing database
-      - ./dock/data/mysql/:/var/lib/mysql #rajouter nom app
-      - ./dock/logs/mysql/:/var/log/mysql #rajouter nom app
+      - ./sites/${APP_NAME}/data/mysql/:/var/lib/mysql
+      - ./sites/${APP_NAME}/logs/mysql/:/var/log/mysql
     ports:
       - 3306:3306
     entrypoint: "" # On écrase l'entrypoint de l'image mysql : ENTRYPOINT ["docker-entrypoint.sh"]
