--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -39,7 +39,7 @@ services:
     build: .
     #command: ["/tmp/wait-for-it.sh", "--timeout=60", "--strict", "mysql:3306", "--", "/tmp/run_install_prestashop.sh"]
     volumes:
-      - app/:/var/www/html:rw
+      - ./app/:/var/www/html:rw
     ports:
       - 8000:80
     depends_on:
