--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -22,22 +22,18 @@ RUN docker-php-source extract \
 	&& if [ -d "/usr/src/php/ext/opcache" ]; then docker-php-ext-install opcache; fi \
 	&& docker-php-source delete
 
-RUN ls
+RUN ls -l
 COPY ./apache-config.conf /etc/apache2/sites-available/000-default.conf
-
-COPY ./phppsinfo.php /var/www/html/
 
 COPY ./wait-for-it.sh /tmp/
 COPY ./docker_entrypoint.sh /tmp/
-
 COPY ./run_install_prestashop.sh /tmp/
 COPY ./phppsinfo.php /tmp/
-
 COPY ./php.ini /usr/local/etc/php/
 
 RUN a2enmod rewrite
 RUN chown -R www-data:www-data /var/www/html/
-RUN chmod +x /tmp/wait-for-it.sh /tmp/docker_entrypoint.sh /tmp/run_install_prestashop.sh
+#RUN chmod +x /tmp/wait-for-it.sh /tmp/docker_entrypoint.sh /tmp/run_install_prestashop.sh
 
 
 # Define working directory.
