--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -32,7 +32,8 @@ COPY ./phppsinfo.php /tmp/
 COPY ./php.ini /usr/local/etc/php/
 
 RUN a2enmod rewrite
-RUN chown -R www-data:www-data /var/www/html/
+COPY --chown=www-data:www-data ${APP_LOCATION}/ /var/www/html/
+
 RUN chmod +x /tmp/wait-for-it.sh /tmp/docker_entrypoint.sh /tmp/run_install_prestashop.sh
 
 
