--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -15,6 +15,7 @@ RUN apt-get update \
 		git \
 	&& mkdir /root/.ssh && chmod 0700 /root/.ssh \
 	&& ssh-keyscan -t rsa github.com > ~/.ssh/known_hosts \
+	&& chmod 600 /root/.ssh/known_hosts \
     && rm -rf /var/lib/apt/lists/* \
     && docker-php-ext-configure gd --with-freetype-dir=/usr/include/ --with-jpeg-dir=/usr/include/ \
     && docker-php-ext-install iconv intl pdo_mysql mbstring soap gd zip
