--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -38,8 +38,8 @@ services:
     build: ./docker
     command: ["/tmp/wait-for-it.sh", "--timeout=60", "--strict", "mysql:3306", "--", "/tmp/run_install_prestashop.sh", "${APP_NAME}"]
     volumes:
-      - ./sites/${APP_NAME}/app/:/var/www/html:rw
-      - ~/.ssh/id_rsa:/root/.ssh/id_rsa:ro
+      - ./sites/${APP_NAME}/app/:/var/www/html
+      - ~/.ssh/id_rsa:/root/.ssh/id_rsa
     ports:
       - 8000:80
     depends_on:
