--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -36,7 +36,7 @@ services:
   app_dev:
     container_name: presta_${APP_NAME}_app
     build: ./docker
-    image: presta_${APP_NAME}_app:latest
+    image: presta/${APP_NAME}_app:latest
     command: ["/tmp/wait-for-it.sh", "--timeout=60", "--strict", "mysql:3306", "--", "/tmp/run_install_prestashop.sh", "${APP_NAME}"]
     volumes:
       - ./sites/${APP_NAME}/app/:/var/www/html
