--- a/.env
+++ b/.env
@@ -17,7 +17,7 @@ PS_ADMIN_EMAIL=email@email.com
 PS_ADMIN_PASSWORD=123456
 PS_DEV_MODE=true
 PS_FOLDER_ADMIN=admin-dev
-PS_MODULE_NAME=testmodule
 PS_LANGUAGE=fr
 PS_COUNTRY=FR
 PS_DB_CREATE=1
+PS_INSTALL_AUTO=1
