--- a/.env
+++ b/.env
@@ -2,6 +2,7 @@
 MYSQL_RANDOM_ROOT_PASSWORD=yes
 MYSQL_USER=username
 MYSQL_PASSWORD=password
+MYSQL_DATABASE=prestashop_test
 MYSQL_SERVER=mysql
 USER_ID=1000
 
