--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,7 +24,7 @@ services:
     #--log-queries-not-using-indexes
 
   phpmyadmin:
-    container_name: presta_${APP_NAME}_phpmyadmin
+    container_name: presta_phpmyadmin
     image: phpmyadmin/phpmyadmin
     ports:
       - 8080:80
@@ -34,7 +34,7 @@ services:
       PMA_HOST: mysql
 
   app_dev:
-    container_name: presta_${APP_NAME}_app
+    container_name: presta_app_${APP_NAME}
     build: ./docker
     image: presta/${APP_NAME}_app:latest
     command: ["/tmp/wait-for-it.sh", "--timeout=60", "--strict", "mysql:3306", "--", "/tmp/run_install_prestashop.sh", "${RUN_INSTALL}"]
