--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,12 +5,14 @@ services:
     image: mariadb:10.5.8
     container_name: presta_mysql
     restart: unless-stopped
+    environment:
+      MYSQL_DATABASE: prestashop_${APP_NAME}
     env_file:
       - .env
     volumes:
       #- ./db_data/db/backup.sql:/docker-entrypoint-initdb.d/backup.sql #it loads an already existing database
-      - ./data/mysql/:/var/lib/mysql
-      - ./logs/mysql/:/var/log/mysql
+      - ./sites/${APP_NAME}/data/mysql/:/var/lib/mysql
+      - ./sites/${APP_NAME}/logs/mysql/:/var/log/mysql
     ports:
       - 3306:3306
     entrypoint: "" # On écrase l'entrypoint de l'image mysql : ENTRYPOINT ["docker-entrypoint.sh"]
@@ -37,7 +39,7 @@ services:
     container_name: presta_app_${APP_NAME}
     build: ./docker
     image: presta/${APP_NAME}_app:latest
-    command: ["/tmp/wait-for-it.sh", "--timeout=60", "--strict", "mysql:3306", "--", "/tmp/run_install_prestashop.sh", "${RUN_INSTALL}"]
+    command: ["/tmp/wait-for-it.sh", "--timeout=60", "--strict", "mysql:3306", "--", "/tmp/run_install_prestashop.sh", "${RUN_INSTALL}", "${APP_NAME}"]
     volumes:
       - ./sites/${APP_NAME}/app/:/var/www/html
       #- ~/.ssh/id_rsa:/root/.ssh/id_rsa
