--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,14 +3,14 @@ version: "3"
 services:
   mysql:
     image: mariadb:10.5.8
-    container_name: presta_mysql
+    container_name: presta_${APP_NAME}_mysql
     restart: unless-stopped
     env_file:
       - .env
     volumes:
       #- ./db_data/db/backup.sql:/docker-entrypoint-initdb.d/backup.sql #it loads an already existing database
-      - ./data/mysql/:/var/lib/mysql
-      - ./logs/mysql/:/var/log/mysql
+      - ./sites/{$APP_NAME}/data/mysql/:/var/lib/mysql
+      - ./sites/{$APP_NAME}/logs/mysql/:/var/log/mysql
     ports:
       - 3306:3306
     entrypoint: "" # On écrase l'entrypoint de l'image mysql : ENTRYPOINT ["docker-entrypoint.sh"]
@@ -34,7 +34,7 @@ services:
       PMA_HOST: mysql
 
   app_dev:
-    container_name: presta_app_${APP_NAME}
+    container_name: presta_${APP_NAME}_app
     build: ./docker
     image: presta/${APP_NAME}_app:latest
     command: ["/tmp/wait-for-it.sh", "--timeout=60", "--strict", "mysql:3306", "--", "/tmp/run_install_prestashop.sh", "${RUN_INSTALL}", "${APP_NAME}"]
