--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -29,7 +29,7 @@ COPY ./run_install_prestashop.sh /tmp/
 COPY ./phppsinfo.php /tmp/
 COPY ./php.ini /usr/local/etc/php/
 
-RUN a2enmod rewrite
+RUN if [ -x "$(command -v apache2-foreground)" ]; then a2enmod rewrite; fi
 COPY --chown=www-data:www-data ${APP_LOCATION}/ /var/www/html/
 
 RUN chmod +x /tmp/wait-for-it.sh /tmp/docker_entrypoint.sh /tmp/run_install_prestashop.sh
