--- a/.env
+++ b/.env
@@ -6,9 +6,11 @@ MYSQL_DATABASE=prestashop
 MYSQL_SERVER=mysql
 USER_ID=1000
 
-# pour docker_entrypoint.sh
+# pour docker_entrypoint.sh app
 DB_HOST=mysql
 DB_PORT=3306
+NGINX_HOST=nginx
+NGINX_PORT=9000
 
 # Prestashop
 PS_DB_SERVER=mysql
