--- a/docker/nginx/Dockerfile
+++ b/docker/nginx/Dockerfile
@@ -1,6 +1,8 @@
 FROM nginx
 
 COPY ./wait-for-it.sh /tmp/
-RUN chmod +x /tmp/wait-for-it.sh
+COPY ./docker_entrypoint.sh ./
+
+RUN chmod +x /tmp/wait-for-it.sh ./docker_entrypoint.sh
 
 ENTRYPOINT ["./docker-entrypoint.sh"]
