--- a/.env
+++ b/.env
@@ -9,7 +9,7 @@ USER_ID=1000
 # pour docker_entrypoint.sh app
 DB_HOST=mysql
 DB_PORT=3306
-NGINX_HOST=nginx
+NGINX_HOST=app
 NGINX_PORT=9000
 
 # Prestashop
