--- a/docker/nginx/Dockerfile
+++ b/docker/nginx/Dockerfile
@@ -6,3 +6,5 @@ COPY ./docker_entrypoint.sh ./
 RUN chmod +x /tmp/wait-for-it.sh ./docker_entrypoint.sh
 
 ENTRYPOINT ["./docker-entrypoint.sh"]
+
+CMD ["nginx" "-g" "daemon off;"]
