--- a/.env
+++ b/.env
@@ -9,8 +9,8 @@ USER_ID=1000
 # pour docker_entrypoint.sh app
 DB_HOST=mysql
 DB_PORT=3306
-NGINX_HOST=app
-NGINX_PORT=9000
+APP_HOST=php-fpm
+APP_PORT=9000
 
 # Prestashop
 PS_DB_SERVER=mysql
