--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -33,6 +33,8 @@ RUN if [ -x "$(command -v apache2-foreground)" ]; then a2enmod rewrite; fi
 COPY --chown=www-data:www-data ${APP_LOCATION}/ /var/www/html/
 
 RUN chmod +x /tmp/wait-for-it.sh /tmp/docker_entrypoint.sh /tmp/run_install_prestashop.sh
+RUN echo "DOCKERFILE FPM"
+RUN echo "${RUN_INSTALL}"
 
 ENTRYPOINT ["/tmp/docker_entrypoint.sh"]
 # Define working directory.
