--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -33,13 +33,12 @@ RUN if [ -x "$(command -v apache2-foreground)" ]; then a2enmod rewrite; fi
 COPY --chown=www-data:www-data ${APP_LOCATION}/ /var/www/html/
 
 RUN chmod +x /tmp/wait-for-it.sh /tmp/docker_entrypoint.sh /tmp/run_install_prestashop.sh
-RUN echo "DOCKERFILE FPM"
-RUN echo $APP_LOCATION
 
 ENTRYPOINT ["/tmp/docker_entrypoint.sh"]
+CMD /tmp/run_install_prestashop.sh ${RUN_INSTALL}
 # Define working directory.
 WORKDIR /var/www/html
 # Define default command.
 EXPOSE 80
 
-CMD /tmp/run_install_prestashop.sh $RUN_INSTALL
+
