--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -35,7 +35,7 @@ COPY --chown=www-data:www-data ${APP_LOCATION}/ /var/www/html/
 RUN chmod +x /tmp/wait-for-it.sh /tmp/docker_entrypoint.sh /tmp/run_install_prestashop.sh
 
 ENTRYPOINT ["/tmp/docker_entrypoint.sh"]
-CMD /tmp/run_install_prestashop.sh ${RUN_INSTALL}
+CMD /tmp/run_install_prestashop.sh true
 # Define working directory.
 WORKDIR /var/www/html
 # Define default command.
