--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -48,7 +48,12 @@ services:
 
   php-fpm:
     container_name: presta_${APP_NAME}_app
-    build: ./docker
+    build: 
+      context: ./docker
+      dockerfile: Dockerfile
+      args:
+        APP_NAME: ${APP_NAME}
+        RUN_INSTALL: ${RUN_INSTALL}
     image: presta/${APP_NAME}_app:latest
     #command: ["/tmp/wait-for-it.sh", "--timeout=60", "--strict", "mysql:3306", "--", "/tmp/run_install_prestashop.sh", "${RUN_INSTALL}", "${APP_NAME}"]
     volumes:
